[gd_scene load_steps=2 format=3 uid="uid://cbkh0tbqvcb6o"]

[ext_resource type="Script" uid="uid://boimoe36cvuq" path="res://GeneratorRow.gd" id="1_uyvk1"]

[node name="GeneratorRow" type="PanelContainer"]
offset_right = 263.0
offset_bottom = 100.0
script = ExtResource("1_uyvk1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="IconRect" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="RPSLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="TotalRPSLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.560784, 0, 1)

[node name="CountLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2

[node name="BuyButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Buy"
